--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "libui-download": "cli.js"
   },
   "scripts": {
-    "test": "xo"
+    "test": "ava && xo"
   },
-  "repository": "parro-it/libui-download"
+  "files": [
+    "index.js",
+    "cli.js"
+  ],
+  "repository": "parro-it/libui-download",
   "author": "Andrea Parodi",
   "license": "MIT",
   "dependencies": {
@@ -17,15 +21,35 @@
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.0",
     "mv": "^2.0.3",
-    "nugget": "^1.5.1",
-    "path-exists": "^1.0.0",
-    "rc": "^1.1.2"
+    "node-fetch": "^1.5.3",
+    "path-exists": "^3.0.0",
+    "rc": "^1.1.2",
+    "regenerator-runtime": "^0.9.5"
   },
   "devDependencies": {
     "ava": "^0.15.2",
-    "path-exists": "^1.0.0",
+    "babel-cli": "^6.10.1",
+    "babel-core": "^6.9.1",
+    "babel-plugin-syntax-async-functions": "^6.8.0",
+    "babel-plugin-transform-regenerator": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-register": "^6.9.0",
     "pify": "^2.3.0",
+    "pinkie-promise": "^2.0.1",
     "xo": "^0.16.0"
   },
-  "keywords": ["libui", "libui-node", "installer"]
+  "keywords": [
+    "libui",
+    "libui-node",
+    "installer"
+  ],
+  "babel": {
+    "presets": [
+      "es2015"
+    ],
+    "plugins": [
+      "transform-regenerator",
+      "syntax-async-functions"
+    ]
+  }
 }
