--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "ava && xo",
-    "prepublish": "babel index.js --out-file es5.js"
+    "build": "babel index.js --out-file es5.js"
   },
   "files": [
     "es5.js",
@@ -23,9 +23,9 @@
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.0",
     "mv": "^2.0.3",
-    "node-fetch": "^1.5.3",
     "rc": "^1.1.2",
-    "regenerator-runtime": "^0.9.5"
+    "regenerator-runtime": "^0.9.5",
+    "request": "^2.72.0"
   },
   "devDependencies": {
     "ava": "^0.15.2",
