--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mv": "^2.0.3",
     "rc": "^1.1.2",
     "regenerator-runtime": "^0.9.5",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "tar-pack": "^3.1.3"
   },
   "devDependencies": {
     "ava": "^0.15.2",
