--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "rc": "^1.1.2",
     "regenerator-runtime": "^0.9.5",
     "request": "^2.72.0",
-    "tar-pack": "^3.1.3"
+    "tar.gz": "^1.0.5"
   },
   "devDependencies": {
     "ava": "^0.15.2",
