--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "pify": "^2.3.0",
     "pinkie-promise": "^2.0.1",
     "regenerator-runtime": "^0.9.5",
-    "request": "^2.72.0",
+    "request": "^2.72.0"
   },
   "devDependencies": {
     "ava": "^0.15.2",
