--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "es5.js",
     "cli.js"
   ],
+  "engines": {
+		"node": ">=4"
+	},
   "repository": "parro-it/libui-download",
   "author": "Andrea Parodi",
   "license": "MIT",
